AS-2002-09-05-1  Bugfix:    "stop" procedure for execd had hardwired execd 
                            spool dir
                 Issue:     #219
                 Bugtraq:   #4742133

AS-2002-09-05-0  Enhancem:  better error message if hostname can't be
                            resolved at commd
                 Changed:   qconf

EB-2002-09-02-1  Bugfix:    qmod help output is incomplete
                 Issue:     #354
                 Bugtraq:   #4741230
                 Review:    AH
                 Changed:   qmod

EB-2002-09-02-0  Bugfix:    load formula of the scheduler
                 Issue:     #330
                 Bugtraq:   #4740578
                 Review:    AS
                 Changed:   sge_qmaster

AS-2002-09-02-0  Bugfix:    Insufficient checking for PTF_*_PRIORITY values
                 Issue:     #333
                 Bugtraq:   #4740407
                 Changed:   sge_execd

AH-2002-09-02-0  Doc:       qmod man page for "-r" incorrect (user)
                            daemons to crash at startup phase
                 Issue:     #193
                 Doc:       job array task index values range not documented
                 Issue:     #283

CR-2002-09-02-0  Testsuite: Merges from maintrunc

EB-2002-09-02-0  Bugfix:    problems with destin_id_list syntax
                 Issue:     #313
                 Bugtraq:   #4740350
                 Review:    AH
                 Changed:   qsub, qalter, qsh
                  
AH-2002-08-30-0  Bugfix:    solaris 32 bit: rlim_fd_max > 1024 can cause 32 bit 
                            daemons to crash at startup phase
                 Issue:     #371
                 Bugtraq:   #4739596
                 Changed:   sge_qmaster sge_execd sge_commd sge_schedd 
                            sge_shadowd

EB-2002-08-29-0  Bugfix:    msg size used in tight PE integr. job start sync. 
                            protocol should be smaller
                 Issue:     #213
                 Bugtraq:   #4658706